# git-nope

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  hash_test.txt  index.html  release_test2.txt
.opencode/agent/: RegressionTester.md
docs/: DOCUMENT_STANDARDS.md  GitAudit.md  GitChanges.md  GitLog.md  GitRm.md  GitStatus.md  MAKEFILE.md  git-nope.1  git-nope.md
src/: lib.rs  main.rs  util.rs
src/applets/: git_add.rs  git_audit.rs  git_changes.rs  git_commit.rs  git_log.rs  git_rm.rs  git_status.rs  mod.rs
src/util/: color.rs  git.rs
tests/: algorithmic.rs  git_commit_test.rs
tests/common/: mod.rs
tests/exploratory/: README.md  suite0_documentation_audit.md  suite1_basic_ops.md  suite2_git_commit.md  suite3_GitRm_glob.md  suite4_GitStatus_baseline.md  suite5_GitLog_modes.md
