[package]
name = "git-nope"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
git2 = "0.19"
glob = "0.3.3"
gix = { version = "0.68", features = ["blocking-network-client", "tree-editor", "dirwalk"] }
gix-index = "0.37"
gix-object = "0.46"
gix-path = "0.10"
jwalk = "0.8"
owo-colors = "4"
thiserror = "1"

[lib]
name = "git_nope"
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
